fix: fix file include path

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,13 @@
 			"-I","${workspaceFolder}/devices/camera",
 			"-I","${workspaceFolder}/module/roi",
 			"-I","${workspaceFolder}/module/filter",
+			"-I","${workspaceFolder}/module/RM_Buff/Center_R",
+			"-I","${workspaceFolder}/module/RM_Buff/Fan_Armor",
+			"-I","${workspaceFolder}/module/RM_Buff/Fan_Blade",
+			"-I","${workspaceFolder}/module/RM_Buff/Object",
+			"-I","${workspaceFolder}/module/RM_Buff/RM_FPS",
+			"-I","${workspaceFolder}/module/RM_Buff/Target",
+			"-I","${workspaceFolder}/module/RM_Buff",
 			// "-I","${workspaceFolder}/module/top_detect",
 			"-I","${workspaceFolder}/base",
 			"-I","/usr/local/include",
@@ -37,6 +44,13 @@
 			"${workspaceFolder}/devices/camera/rm_video_capture.cpp",
 			"${workspaceFolder}/module/roi/rm_roi.cpp",
 			"${workspaceFolder}/module/filter/filter.cpp",
+			"${workspaceFolder}/module/RM_Buff/Center_R/Center_R.cpp",
+			"${workspaceFolder}/module/RM_Buff/Fan_Armor/Fan_Armor.cpp",
+			"${workspaceFolder}/module/RM_Buff/Fan_Blade/Fan_Blade.cpp",
+			"${workspaceFolder}/module/RM_Buff/Object/Object.cpp",
+			"${workspaceFolder}/module/RM_Buff/RM_FPS/RM_FPS.cpp",
+			"${workspaceFolder}/module/RM_Buff/Target/Target.cpp",
+			"${workspaceFolder}/module/RM_Buff/RM_Buff.cpp",
 			// "${workspaceFolder}/module/top_detect/top.cpp",
 			"${workspaceFolder}/base/connector.cpp",
 			"${workspaceFolder}/user/main.cpp",/* ${workspaceFolder}表⽰路径从当前项⽬⽂件夹开始 */
