--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,7 +30,7 @@
 			"-I","${workspaceFolder}/module/RM_Buff/RM_FPS",
 			"-I","${workspaceFolder}/module/RM_Buff/Target",
 			"-I","${workspaceFolder}/module/RM_Buff",
-			// "-I","${workspaceFolder}/module/top_detect",
+			"-I","${workspaceFolder}/module/top_detect",
 			"-I","${workspaceFolder}/base",
 			"-I","/usr/local/include",
 			"-I","/usr/local/include/opencv4",
@@ -51,7 +51,7 @@
 			"${workspaceFolder}/module/RM_Buff/RM_FPS/RM_FPS.cpp",
 			"${workspaceFolder}/module/RM_Buff/Target/Target.cpp",
 			"${workspaceFolder}/module/RM_Buff/RM_Buff.cpp",
-			// "${workspaceFolder}/module/top_detect/top.cpp",
+			"${workspaceFolder}/module/top_detect/top.cpp",
 			"${workspaceFolder}/base/connector.cpp",
 			"${workspaceFolder}/user/main.cpp",/* ${workspaceFolder}表⽰路径从当前项⽬⽂件夹开始 */
 			"-o", /* 编译输出⽂件的存放路径 */
