1minist-8.onnx增加了opencv_onnx_inferrinng.hpp文件 2 update了一个orc文件夹，包括orc类和orc_config 3 rm_armor声明了Number函数和Save_ROI函数用来调用装甲板 4 orc_config.xml文件的编写

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
     {
 
         "name": "(gdb) Launch", /* 配置名称，将会在启动配置的下拉菜单中显⽰ */
-        "preLaunchTask": "build", /* 调试前执⾏ 'build'选项 */
+        // "preLaunchTask": "build", /* 调试前执⾏ 'build'选项 */
         "type": "cppdbg", /* 配置类型，这⾥只能为cppdbg */
         "request": "launch",/**/
         "program": "${workspaceFolder}/run.o", /*选择要调试的⽂件路径*/
